--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ python-dotenv==1.0.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
 httpx==0.25.2
+passlib==1.7.4
+bcrypt==4.0.1
+PyJWT==2.8.0
+email-validator==2.0.0
